Remove unused imports + Ignore vscode files

--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,23 @@
 hs_err_pid*
 
 # IDE
+#Intellij IDEA
 .idea
 *.iml
 
+# VSCode / Eclipse
+.settings
+.factorypath
+.project
+.classpath
+bin/
+.vscode
+*.code-workspace
+
+.history/
+
 # Maven
 target
+
+
+
