--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-plugins</artifactId>
-        <version>3.17.0-01</version>
+        <version>3.15.1-01</version>
     </parent>
 
     <groupId>ir.sahab</groupId>
@@ -97,6 +97,10 @@
         </plugins>
     </build>
     <repositories>
+        <repository>
+            <id>external:rso-public-grid</id>
+            <url>https://repository.sonatype.org/content/groups/sonatype-public-grid/</url>
+        </repository>
         <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
