--- a/pom.xml
+++ b/pom.xml
@@ -21,16 +21,25 @@
             <artifactId>nexus-plugin-api</artifactId>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>org.sonatype.nexus</groupId>
             <artifactId>nexus-repository</artifactId>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.sonatype.nexus</groupId>
+            <artifactId>nexus-validation</artifactId>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.sonatype.nexus.plugins</groupId>
             <artifactId>nexus-repository-httpbridge</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-validator-provider-11</artifactId>
             <scope>provided</scope>
         </dependency>
 
